# shua_struct

./: LICENSE  README.md  pyproject.toml
shua/struct/: __init__.py  binary.py  field.py
tests/: __init__.py  __main__.py
