[project]
name = "shua_struct"
version = "0.1.3"
description = "Flexible binary data parsing and building for Python."
authors = [
    {name = "Shua-github", email = "CHA_shua@outlook.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {file ="./LICENSE"}

[project.urls]
"Repository" = "https://github.com/shua-github/shua_struct"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["./shua"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test.call = "tests:main"
